--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ twitter.appId=${twitterAppId}
 twitter.appSecret=${twitterAppSecret}
 twitter.accessToken=${accessToken}
 twitter.accessTokenSecret=${accessTokenSecret}
+twitter.userHandle=${userHandle}
