Externalize sensor thresholds for reactions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ twitter.appSecret=${twitterAppSecret}
 twitter.accessToken=${accessToken}
 twitter.accessTokenSecret=${accessTokenSecret}
 twitter.userHandle=${userHandle}
+
+sensor.moisture.wateringThreshold=750
