Add sunny day reaction and support for emoji

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ twitter.accessTokenSecret=${accessTokenSecret}
 twitter.userHandle=${userHandle}
 
 sensor.moisture.wateringThreshold=750
+sensor.light.sunnyThreshold=4000
