Add hot day reaction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ twitter.accessTokenSecret=${accessTokenSecret}
 twitter.userHandle=${userHandle}
 sensor.moisture.wateringThreshold=750
 sensor.light.sunnyThreshold=4000
+sensor.temperature.median=21
+sensor.temperature.tolerance=3
