--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ sensor.moisture.wateringThreshold=750
 sensor.light.sunnyThreshold=4000
 sensor.temperature.median=21
 sensor.temperature.tolerance=3
+wemo.ipAddress=${wemoIpAddress}
+wemo.port=${wemoPort}
