--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ sensor.temperature.median=21
 sensor.temperature.tolerance=3
 wemo.ipAddress=${wemoIpAddress}
 wemo.port=${wemoPort}
+pubnub.subscribeKey=${subscribeKey}
+pubnub.publishKey=${publishKey}
+pubnub.uuid=ignis-client
+pubnub.channel=ignis-channel
