Split the pubnub channels into two

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ wemo.port=${wemoPort}
 pubnub.subscribeKey=${subscribeKey}
 pubnub.publishKey=${publishKey}
 pubnub.uuid=ignis-client
-pubnub.channel=ignis-channel
+pubnub.readingsChannel=ignis-readings
+pubnub.reactionChannel=ignis-reaction
