Use fixed wemo port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ sensor.light.sunnyThreshold=4000
 sensor.temperature.median=21
 sensor.temperature.tolerance=3
 wemo.ipAddress=${wemoIpAddress}
-wemo.port=${wemoPort}
+wemo.port=49153
 pubnub.subscribeKey=${subscribeKey}
 pubnub.publishKey=${publishKey}
 pubnub.uuid=ignis-client
